<?xml version="1.0"?>
<package format="2">
  <name>ze_cameras</name>
  <version>0.1.4</version>
  <description>
    Camera class.
  </description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>imp_core</depend>
  <depend>imp_bridge_opencv</depend>
  <depend>minkindr</depend>
  <depend>yaml-cpp</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>cv_bridge</depend>

  <test_depend>gtest</test_depend>
</package>
